<resources>
    <string name="app_name">Espresso Testing</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>

    <string name="login_success">Success</string>
    <string name="login_failed">Failure</string>
</resources>
